# af_NFC

./: .gitignore  CMakeLists.txt  README.md
include/: AFLattice.h  AF_LBMlib.h  Problem.h
python/: afNFC_create_restart.py  afNFC_partition.py  afNFC_write_params.py  hdf5Helper.py  process_afNFC.py
src/: AFLattice.cu  AF_LBMlib.cu  Problem.cpp  afNFC.cu
